snapshots/care/data4life/hc-result-sdk-kmp/error/0.1.1-SNAPSHOT/error-0.1.1-20210823.130037-1.module.sha1
0d117f1828edf9071c59278d7ca1d5e0ca73b8fd